--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "@radix-ui/react-slot": "^1.1.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
-        "lucide-react": "^0.454.0",
+        "immer": "^10.1.1",
+        "lucide-react": "^0.456.0",
         "react": "^19.0.0-rc-fb9a90fa48-20240614",
         "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
         "tailwind-merge": "^2.5.4",
@@ -31,12 +32,12 @@
         "eslint": "^9.14.0",
         "eslint-plugin-react": "^7.37.2",
         "globals": "^15.12.0",
-        "postcss": "^8.4.47",
+        "postcss": "^8.4.48",
         "prettier": "^3.3.3",
         "tailwindcss": "^3.4.14",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.13.0",
-        "vite": "^5.4.10",
+        "vite": "^5.4.11",
         "vite-plugin-svgr": "^4.3.0"
     }
 }
